--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Device Properties Example</title>
-
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=medium-dpi" />
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8">
         document.addEventListener("deviceready", onDeviceReady, false);
@@ -16,8 +16,6 @@
             alert('code: ' + error.code + '\n' +
                 'message: ' + error.message + '\n');
         };
-
-
 
         window.onload = function() {
 
